--- a/main.html
+++ b/main.html
@@ -12,39 +12,70 @@
 
 <body>
     <div class="wrap">
-    	<!-- nav bar  -->
-    <div class="top-nav" id="myTopNav">
-        <a href="#about">About</a>
-        <a href="#design">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-        <a href="javascript:void(0);" class="icon"> &#9776;</a>
-    </div>
+        <!-- nav bar  -->
+        <div class="top-nav" id="myTopNav">
+            <a href="#about">About</a>
+            <a href="#design">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+            <a href="javascript:void(0);" class="icon"> &#9776;</a>
+        </div>
         <div class="container main">
             <h2>Leaping in to my passion as</h2>
             <h1>Full-Stack Developer</h1>
             <p></p>
-            <a href="mailto:biancasar93@gmail.com"><button>Let's work together</button></a>
+            <a href="mailto:biancasar93@gmail.com">
+                <button>Let's work together</button>
+            </a>
         </div>
         <div class="container skills">
             <div class="right">
-            	<h1>Hello! 
+                <h1>Hello! 
             	I'm Bianca avila</h1>
             </div>
             <div class="left">
-                <p>As a communicator at a non-profit, I always stood-up as an empathetic person who would seek challenge to inspire change. In pursuit of my passion of learning and creating things, I leaped into web development to start a new chapter in my career as a full-stack developer.                  </p>
+                <p>As a communicator at a non-profit, I always stood-up as an empathetic person who would seek challenge to inspire change. In pursuit of my passion of learning and creating things, I leaped into web development to start a new chapter in my career as a full-stack developer. </p>
                 <div class="container brief">
                     <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                     <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
                     <a href="" target="_blank"> <img class="icon" src="./img/cv-social-media.png"></a>
                     <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
                 </div>
+                <h1>Some Awesome Skills</h1>
                 <div class="container skill">
-                    <div class="sub-skill">font end</div>
-                    <div class="sub-skill">back end</div>
-                    <div class="sub-skill">graphic desing</div>
-                    <div class="sub-skill">marketing</div>
-                    <div class="sub-skill"></div>
+                    <div class="container sub-skill">font end  ▶︎</div>
+                    <div class="container sub-skill">
+                        <ul>
+                            <li>html-5</li>
+                            <li>css-3</li>
+                            <li>javaScript</li>
+                            <li>ruby</li>
+                            <li>react.js</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">back end  ▶︎</div><div class="container sub-skill">
+                        <ul>
+                            <li>node.js</li>
+                            <li>psql</li>
+                            <li>rails</li>
+                            <li>ruby</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">graphic design ▶︎</div><div class="container sub-skill">
+                        <ul>
+                            <li>DreamWeaver</li>
+                            <li>Illustrator</li>
+                            <li>Photoshop</li>
+                            <li>indesign</li>
+                            <li>After Effects</li>
+                        </ul>
+                    </div>
+                    <div class="container sub-skill">marketing ▶︎ </div><div class="container sub-skill">
+                        <ul>
+                            <li>Social Media Management</li>
+                            <li>Public Relations</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
