--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
                 <h1>Hello! 
             	I'm Bianca avila</h1>
             </div>
-            <div class="left">
-                <p>As a communicator at a non-profit, I always stood-up as an empathetic person who would seek challenge to inspire change. In pursuit of my passion of learning and creating things, I leaped into web development to start a new chapter in my career as a full-stack developer. </p>
+            <div class="container left">
+                <p>As a communicator at a non-profit, I always stood up as an empathetic person who would seek challenge to inspire change. In pursuit of my passion of learning and creating things, I leaped into web development to start a new chapter in my career as a full-stack developer. </p>
                 <div class="container brief">
                     <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                     <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
@@ -43,7 +43,7 @@
                 </div>
                 <h1>Some Awesome Skills</h1>
                 <div class="container skill">
-                    <div class="container sub-skill">font end  ▶︎</div>
+                    <div class="container sub-skill">font end ▶︎</div>
                     <div class="container sub-skill">
                         <ul>
                             <li>html-5</li>
@@ -53,7 +53,8 @@
                             <li>react.js</li>
                         </ul>
                     </div>
-                    <div class="container sub-skill">back end  ▶︎</div><div class="container sub-skill">
+                    <div class="container sub-skill">back end ▶︎</div>
+                    <div class="container sub-skill">
                         <ul>
                             <li>node.js</li>
                             <li>psql</li>
@@ -61,7 +62,8 @@
                             <li>ruby</li>
                         </ul>
                     </div>
-                    <div class="container sub-skill">graphic design ▶︎</div><div class="container sub-skill">
+                    <div class="container sub-skill">graphic design ▶︎</div>
+                    <div class="container sub-skill">
                         <ul>
                             <li>DreamWeaver</li>
                             <li>Illustrator</li>
@@ -70,7 +72,8 @@
                             <li>After Effects</li>
                         </ul>
                     </div>
-                    <div class="container sub-skill">marketing ▶︎ </div><div class="container sub-skill">
+                    <div class="container sub-skill">marketing ▶︎ </div>
+                    <div class="container sub-skill">
                         <ul>
                             <li>Social Media Management</li>
                             <li>Public Relations</li>
@@ -79,12 +82,31 @@
                 </div>
             </div>
         </div>
+        <div class="project-title">
+        		<h1>Projects</h1>
+        	</div>
         <div class="container portafolio">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        	
+            <div class="container project">
+                <h1>Front End </h1>
+                <p>responsive web aplications accross platforms</p>
+                <button>▶︎</button>
+            </div>
+            <div class="container project">
+                <h1>Full-Stack</h1>
+                <p>RESTful web apps integrating flexible CRUD user interphase.</p>
+                <button>▶︎</button>
+            </div>
+            <div class="container project">
+                <h1>React.js</h1>
+                <p>seamsless user experience Web apps</p>
+                <button>▶︎</button>
+            </div>
+            <div class=" container project">
+                <h1>Express</h1>
+                <p>Dinamic Web Apps qith basic CRUD utilizing postgresql</p>
+                <button>▶︎</button>
+            </div>
         </div>
         <div class="container contact">
             <h1></h1>
