contact info update

--- a/main.html
+++ b/main.html
@@ -88,34 +88,33 @@
         <div class="container portafolio">
         	
             <div class="container project">
+            	<img src="./icon/front-end.png">
                 <h1>Front End </h1>
                 <p>responsive web aplications accross platforms</p>
                 <button>▶︎</button>
             </div>
             <div class="container project">
+            	<img src="./icon/full_stack.png">
                 <h1>Full-Stack</h1>
                 <p>RESTful web apps integrating flexible CRUD user interphase.</p>
                 <button>▶︎</button>
             </div>
             <div class="container project">
+            	<img src="./icon/react-native.png">
                 <h1>React.js</h1>
                 <p>seamsless user experience Web apps</p>
                 <button>▶︎</button>
             </div>
             <div class=" container project">
+            	<img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dinamic Web Apps qith basic CRUD utilizing postgresql</p>
                 <button>▶︎</button>
             </div>
         </div>
         <div class="container contact">
-            <h1></h1>
-            <form action="">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <button></button>
-            </form>
+            <h1>contact me</h1>
+            
         </div>
     </div>
 </body>
