modal boxes by mode

--- a/main.html
+++ b/main.html
@@ -14,8 +14,7 @@
     <div class="wrap">
         <!-- nav bar  -->
         <div class="top-nav" id="myTopNav">
-            <a href="#about">About</a>
-            <a href="#design">Skills</a>
+            <a href="#skills">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
             <a href="javascript:void(0);" class="icon"> &#9776;</a>
@@ -28,7 +27,7 @@
                 <button>Let's work together</button>
             </a>
         </div>
-        <div class="container skills">
+        <div class="container skills" id="skills">
             <div class="right">
                 <h1>Hello! 
             	I'm Bianca avila</h1>
@@ -82,39 +81,65 @@
                 </div>
             </div>
         </div>
-        <div class="project-title">
-        		<h1>Projects</h1>
-        	</div>
+        <div class="container project-title" id="projects">
+            <h1>Projects</h1>
+        </div>
         <div class="container portafolio">
-        	
             <div class="container project">
-            	<img src="./icon/front-end.png">
+                <img src="./icon/front-end.png">
                 <h1>Front End </h1>
                 <p>responsive web aplications accross platforms</p>
-                <button>▶︎</button>
+                <button class="button-project" value="front-end">▶︎</button>
             </div>
             <div class="container project">
-            	<img src="./icon/full_stack.png">
+                <img src="./icon/full_stack.png">
                 <h1>Full-Stack</h1>
                 <p>RESTful web apps integrating flexible CRUD user interphase.</p>
-                <button>▶︎</button>
+                <button class="button-project" value="full-stack">▶︎</button>
             </div>
             <div class="container project">
-            	<img src="./icon/react-native.png">
+                <img src="./icon/react-native.png">
                 <h1>React.js</h1>
                 <p>seamsless user experience Web apps</p>
-                <button>▶︎</button>
+                <button class="button-project" value="react">▶︎</button>
             </div>
             <div class=" container project">
-            	<img src="./icon/node.png">
+                <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dinamic Web Apps qith basic CRUD utilizing postgresql</p>
-                <button>▶︎</button>
+                <button class="button-project" value="express">▶︎</button>
             </div>
         </div>
-        <div class="container contact">
+        <div class="container contact" id="contact">
+            <div>
+            </div>
+            <div class="container brief">
+                <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
+                <a href="" target="_blank"> <img class="icon" src="./img/cv-social-media.png"></a>
+                <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
+            </div>
+            <h2>biancasar93@gmail.com</h2>
             <h1>contact me</h1>
-            
+        </div>
+        <!-- modal box of projects -->
+        <div id="modal" class="project-modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="front-end container">
+                    <p>this is front-end</p>
+                </div>
+                <div class="full-stack container">
+                    <p>this is full stack</p>
+                </div>
+                <div class="react container">
+                    <p>this is react</p>
+                </div>
+                <div class="express container">
+                    <p>this is express</p>
+                </div>
+                <p>this is a modal box</p>
+            </div>
         </div>
     </div>
 </body>
