modal of projejcts finalized

--- a/main.html
+++ b/main.html
@@ -127,21 +127,134 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="front-end container">
-                    <p>this is front-end</p>
+                    <h1>Front-end projects </h1>
+                    <p>Responsive Web applications accross platforms created with Html-5 and css3 technologies. Each project features minimal and clean aesthetic styles.</p>
+                    <div class=" container individual-project">
+                        <img src="./project-img/mail-flex-front-end2.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/mail-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>mail flex template</h1>
+                        <p>mail template created with a modern style</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/minimal-flex.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/minima-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>minimal flex template</h1>
+                        <p>minimal black and white cross platform template</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/responsive-template.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/responsive-web-template" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>responsive web template</h1>
+                        <p>web application featuring a clean aesthetic</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/passion-front-end.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/passion-responsive-" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>passion responsive template
+                        </h1>
+                        <p>Simple yet modern mail template</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/lookbook-front-end.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/lookbook" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>lookbook</h1>
+                        <p>mail template featuring a combination of minimal and product center design </p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/architecture.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/architecture-form" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>clean concept</h1>
+                        <p>clean landing page featuring main values and concepts on a flexible web template</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/random.png" alt="">
+                        <span class="container">
+        				<a href="https://git.generalassemb.ly/pages/bavilari93/Game-Project-1-Bianca-Avila/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>random game</h1>
+                        <p>Optimized front-end web application developed to challange logic and basic math knowledge as a guessing game</p>
+                    </span>
+                    </div>
                 </div>
                 <div class="full-stack container">
-                    <p>this is full stack</p>
+                    <h1>Full-stack projects </h1>
+                    <p>RESTful web apps integrating full CRUD user interphase.each project was developed with various technologies.</p>
+                    <div class=" container individual-project">
+                        <img src="./project-img/wanderer.png" alt="">
+                        <span class="container">
+        				<a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>Wanderer</h1> 
+                        <p>
+                        Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
+                        <br>
+
+                         Technologies:
+                     JavaScript, Postgresql, Node.js and Express.js</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/barkbook.png" alt="">
+                        <span class="container">
+        				<a href="https://git.generalassemb.ly/proj3/rails_app" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>BarkBook</h1> 
+                        <p>
+                        Ruby on Rails dinamic web app with full CRUD utilizing a friend relashipship database with Mysql.Allowing the user to see friends profile and comment on their events and saved locations</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/apetit.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>APETIT</h1> 
+                        <p>
+                        Full-Stack React.js application featuring multiple API's calls allowing the user interface with CRUD authentication.The web app premise is to suggest most voted restaurants nearby the user's location. </p>
+                    </span>
+                    </div>
                 </div>
                 <div class="react container">
-                    <p>this is react</p>
+                	<h1>REACT.js </h1>
+                 
+                    <div class=" container individual-project">
+                        <img src="./project-img/apetit.png" alt="">
+                        <span class="container">
+        				<a href="https://github.com/bavilari93/Final-Project-GA" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>APETIT</h1> 
+                        <p>
+                        Full-Stack React.js application featuring multiple API's calls allowing the user interface with CRUD authentication.The web app premise is to suggest most voted restaurants nearby the user's location. </p>
+                    </span>
+                    </div>
                 </div>
                 <div class="express container">
-                	<a href="https://gorgeous-voyageurs-44388.herokuapp.com/">Wanderer</a>
-                    <p>this is express</p>
+                    <h1>EXPRESS </h1>
+                   
+                    <div class=" container individual-project">
+                        <img src="./project-img/wanderer.png" alt="">
+                        <span class="container">
+        				<a href="https://gorgeous-voyageurs-44388.herokuapp.com/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>Wanderer</h1> 
+                        <p>
+                        Restful traveling app that integrates a flexible CRUD user interphase to provide a relevant information regarding travel destination.<br>
+                        <br>
+
+                         Technologies:
+                     JavaScript, Postgresql, Node.js and Express.js</p>
+                    </span>
+                    </div>
                 </div>
-                <p>this is a modal box</p>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
