--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </a>
         </div>
         <div class="container skills" id="skills">
-            <div class="right">
-                <h1>Hello! 
-            	I'm Bianca avila</h1>
-            </div>
             <div class="container left">
+            	<span class="container">
+            		<h1>Hello! 
+            	I'm Bianca avila</h1>
                 <p>As a communicator at a non-profit, I always stood up as an empathetic person who would seek challenge to inspire change. In pursuit of my passion of learning and creating things, I leaped into web development to start a new chapter in my career as a full-stack developer. </p>
+            </span>
                 <div class="container brief">
                     <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                     <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
