--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@
                     </span>
                     </div>
                 </div>
+                <span class="close">&times;</span>
             </div>
+
         </div>
     </div>
     </div>
