--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- modal box of projects -->
         <div id="modal" class="project-modal">
             <div class="modal-content">
-                <span id="close">&times;</span>
+                <span class="close">&times;</span>
                 <div class="front-end container">
                     <h1>Front-end projects </h1>
                     <p>Responsive Web applications accross platforms created with Html-5 and css3 technologies. Each project features minimal and clean aesthetic styles.</p>
@@ -252,7 +252,7 @@
                     </span>
                     </div>
                 </div>
-                <span id="close">&times;</span>
+                <span class="close">&times;</span>
             </div>
 
         </div>
