--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                     </span>
                     </div>
                 </div>
-                <div class="cv container">
-                    <div class="modal-content container">
+                <div class="container cv ">
+                    <div class="modal-content">
                         <embed class="resume" src="./docs/resume_bianca_avila.pdf" />
                     </div>
                 </div>
