--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container brief">
                     <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                     <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-                    <button class="button-project" value="cv"> <img class="icon" src="./img/cv-social-media.png"></button>
+                    <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
                     <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
                 </div>
                 <h1>Some Awesome Skills</h1>
@@ -107,7 +107,7 @@
                 <img src="./icon/node.png">
                 <h1>Express</h1>
                 <p>Dynamic Web Apps with basic CRUD utilizing PostgreSQL</p>
-                <button class="button-project" value="express">▶︎</button>
+                <button class="button-project" value="express" >▶︎</button>
             </div>
         </div>
         <div class="container contact" id="contact">
@@ -116,7 +116,7 @@
             <div class="container brief">
                 <a href="https://github.com/bavilari93?tab=repositories" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                 <a href="https://www.linkedin.com/in/avilabianca/" target="_blank"> <img class="icon" src="./img/linkedin-social-media.png"></a>
-                <button class="button-project" value="cv"> <img class="icon" src="./img/cv-social-media.png"></button>
+               <a href="./docs/resume_bianca_avila.pdf" target="_blank">  <img class="icon" src="./img/cv-social-media.png"></a>
                 <a href="mailto:biancasar93@gmail.com"> <img class="icon" src="./img/email-social-media.png"></a>
             </div>
             <h2>biancasar93@gmail.com</h2>
@@ -234,7 +234,7 @@
                     </span>
                     </div>
                 </div>
-                <div class="express container">
+                <div class="express  container">
                     <h1>EXPRESS </h1>
                     <div class=" container individual-project">
                         <img src="./project-img/wanderer.png" alt="">
@@ -248,11 +248,6 @@
                          Technologies:
                      JavaScript, Postgresql, Node.js and Express.js</p>
                     </span>
-                    </div>
-                </div>
-                <div class="container cv ">
-                    <div class="modal-content">
-                        <embed class="resume" src="./docs/resume_bianca_avila.pdf" />
                     </div>
                 </div>
             </div>
