--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                 <div class="front-end container">
                     <h1>Front-end projects </h1>
                     <p>Responsive Web applications across platforms created with Html-5 and css3 technologies. Each project features minimal and clean aesthetic styles.</p>
+                     <div class=" container individual-project">
+                        <img src="./project-img/Habitat-pro.jpg" alt="">
+                        <span class="container">
+                        <a href="http://www.habitatpro.org/" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>Habitat Pro</h1>
+                        <p>Created social media UI/UX with the premise of resonating the voice of indigenous peoples</p>
+                    </span>
+                    </div>
                     <div class=" container individual-project">
                         <img src="./project-img/mail-flex-front-end2.png" alt="">
                         <span class="container">
@@ -137,22 +145,7 @@
                         <p>mail template created with a modern style</p>
                     </span>
                     </div>
-                    <div class=" container individual-project">
-                        <img src="./project-img/minimal-flex.png" alt="">
-                        <span class="container">
-        				<a href="https://github.com/bavilari93/minima-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                        <h1>minimal flex template</h1>
-                        <p>minimal monochrome  cross-platform template</p>
-                    </span>
-                    </div>
-                    <div class=" container individual-project">
-                        <img src="./project-img/responsive-template.png" alt="">
-                        <span class="container">
-        				<a href="https://github.com/bavilari93/responsive-web-template" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
-                        <h1>responsive web template</h1>
-                        <p>web application featuring a clean aesthetic</p>
-                    </span>
-                    </div>
+                    
                     <div class=" container individual-project">
                         <img src="./project-img/passion-front-end.png" alt="">
                         <span class="container">
@@ -176,6 +169,22 @@
         				<a href="https://github.com/bavilari93/architecture-form" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
                         <h1>clean concept</h1>
                         <p>clean landing page</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/minimal-flex.png" alt="">
+                        <span class="container">
+                        <a href="https://github.com/bavilari93/minima-flex" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>minimal flex template</h1>
+                        <p>minimal monochrome  cross-platform template</p>
+                    </span>
+                    </div>
+                    <div class=" container individual-project">
+                        <img src="./project-img/responsive-template.png" alt="">
+                        <span class="container">
+                        <a href="https://github.com/bavilari93/responsive-web-template" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>responsive web template</h1>
+                        <p>web application featuring a clean aesthetic</p>
                     </span>
                     </div>
                     <div class=" container individual-project">
@@ -224,6 +233,15 @@
                 </div>
                 <div class="react container">
                     <h1>REACT.js </h1>
+                    <div class=" container individual-project">
+                        <img src="./project-img/React-landing-page.jpg" alt="">
+                        <span class="container">
+                        <a href="https://github.com/bavilari93/landingPageReact" target="_blank"> <img class="icon" src="./img/github-social-media.png"></a>
+                        <h1>APETIT</h1> 
+                        <p>
+                        Landing web page featuring an intuitive navigation framework</p>
+                    </span>
+                    </div>
                     <div class=" container individual-project">
                         <img src="./project-img/apetit.png" alt="">
                         <span class="container">
