--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="javascript:void(0);" class="icon"> &#9776;</a>
         </div>
         <div class="container main">
-            <h2>Leaping in to my passion as</h2>
+            <h2>Bianca Avila</h2>
             <h1>Full-Stack Developer</h1>
             <p></p>
             <a href="mailto:biancasar93@gmail.com">
